fix contrast

--- a/W02/css/small.css
+++ b/W02/css/small.css
@@ -10,7 +10,7 @@ body {
 
 header {
    background-color: #2ec4b6;
-   color: white;
+   color: #011627;
    text-align: center;
    min-width: 226px;
    padding: 5px 15px;
